--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.0.1",
     "black-engine": "^0.5.16",
     "ismobilejs": "^1.1.1",
+    "query-string": "^8.1.0",
     "three": "^0.157.0",
     "tweakpane": "^3.1.7",
     "vercel": "^28.20.0"
