--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.0.1",
     "black-engine": "^0.5.16",
+    "gapi": "^0.0.3",
     "ismobilejs": "^1.1.1",
     "query-string": "^8.1.0",
     "three": "^0.157.0",
