--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crazy-pumpkin",
   "version": "0.1.0",
   "description": "Crazy Pumpkin",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
